; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dsi.c_tegra_dsi_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dsi.c_tegra_dsi_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_dsi = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_dsi*, i32, i32)* @tegra_dsi_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_dsi_writel(%struct.tegra_dsi* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.tegra_dsi*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.tegra_dsi* %0, %struct.tegra_dsi** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.tegra_dsi*, %struct.tegra_dsi** %4, align 8
  %8 = getelementptr inbounds %struct.tegra_dsi, %struct.tegra_dsi* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @trace_dsi_writel(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.tegra_dsi*, %struct.tegra_dsi** %4, align 8
  %15 = getelementptr inbounds %struct.tegra_dsi, %struct.tegra_dsi* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i32, i32* %6, align 4
  %18 = shl i32 %17, 2
  %19 = zext i32 %18 to i64
  %20 = add nsw i64 %16, %19
  %21 = call i32 @writel(i32 %13, i64 %20)
  ret void
}

declare dso_local i32 @trace_dsi_writel(i32, i32, i32) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
